day 3 reuse parseDiagnostic

--- a/day03/puzzle_1_actual.ipynb
+++ b/day03/puzzle_1_actual.ipynb
@@ -110,9 +110,7 @@
    "source": [
     "#!share --from value diagnosticRaw\n",
     "\n",
-    "let diagnostic = \n",
-    "    diagnosticRaw.Split([|'\\n'|], StringSplitOptions.RemoveEmptyEntries) \n",
-    "    |> Array.map (fun s -> Convert.ToInt32 (s, 2))\n"
+    "let diagnostic = parseDiagnostic diagnosticRaw\n"
    ]
   },
   {
