--- a/day05/puzzle.ipynb
+++ b/day05/puzzle.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 5: Hydrothermal Venture"
+    "## Day 5: Hydrothermal Venture\n",
+    "[link](https://adventofcode.com/2021/day/5)"
    ]
   },
   {
