--- a/day06/puzzle.ipynb
+++ b/day06/puzzle.ipynb
@@ -8,7 +8,8 @@
     }
    },
    "source": [
-    "## Day 6: Lanternfish"
+    "## Day 6: Lanternfish\n",
+    "[link](https://adventofcode.com/2021/day/6)"
    ]
   },
   {
