--- a/day04/puzzle.ipynb
+++ b/day04/puzzle.ipynb
@@ -123,20 +123,13 @@
    },
    "outputs": [],
    "source": [
-    "let private formatBoard (board : Number[,]) = \n",
-    "    let builder = StringBuilder()\n",
-    "    Printf.bprintf builder \"<table>\"\n",
-    "    for i in 0..(Array2D.length1 board - 1) do\n",
-    "        Printf.bprintf builder \"<tr>\"\n",
-    "        for j in 0..(Array2D.length2 board - 1) do\n",
-    "            match board.[i, j] with\n",
-    "            | Number (num, true) -> Printf.bprintf builder $\"<td><u><b>{num}</b></u></span></td>\"\n",
-    "            | Number (num, false) -> Printf.bprintf builder $\"<td>{num}</td>\"            \n",
-    "        Printf.bprintf builder \"</tr>\"\n",
-    "    Printf.bprintf builder \"</table>\"\n",
-    "    builder.ToString();\n",
+    "#load \"../formatting.fsx\"\n",
+    "let private formatBoardElement el =\n",
+    "    match el with\n",
+    "    | Number (num, true) -> $\"<u><b>{num}</b></u>\"\n",
+    "    | Number (num, false) -> string num    \n",
     "\n",
-    "Formatter.Register<Board>((fun (Board (board)) -> formatBoard board), \"text/html\")"
+    "Formatter.Register<Board>((fun (Board (board)) -> formatTable formatBoardElement board), \"text/html\")"
    ]
   },
   {
@@ -259,7 +252,7 @@
     {
      "data": {
       "text/html": [
-       "<table><tr><td>22</td><td>13</td><td>17</td><td>11</td><td>0</td></tr><tr><td><u><b>8</b></u></span></td><td><u><b>2</b></u></span></td><td><u><b>23</b></u></span></td><td>4</td><td><u><b>24</b></u></span></td></tr><tr><td>21</td><td>9</td><td>14</td><td><u><b>16</b></u></span></td><td>7</td></tr><tr><td>6</td><td>10</td><td>3</td><td>18</td><td>5</td></tr><tr><td>1</td><td>12</td><td>20</td><td>15</td><td>19</td></tr></table>"
+       "<table><tr><td>22</td><td>13</td><td>17</td><td>11</td><td>0</td></tr><tr><td><u><b>8</b></u></td><td><u><b>2</b></u></td><td><u><b>23</b></u></td><td>4</td><td><u><b>24</b></u></td></tr><tr><td>21</td><td>9</td><td>14</td><td><u><b>16</b></u></td><td>7</td></tr><tr><td>6</td><td>10</td><td>3</td><td>18</td><td>5</td></tr><tr><td>1</td><td>12</td><td>20</td><td>15</td><td>19</td></tr></table>"
       ]
      },
      "metadata": {},
@@ -297,7 +290,7 @@
     {
      "data": {
       "text/html": [
-       "<table><tr><td>22</td><td>13</td><td>17</td><td>11</td><td>0</td></tr><tr><td><u><b>8</b></u></span></td><td><u><b>2</b></u></span></td><td><u><b>23</b></u></span></td><td><u><b>4</b></u></span></td><td><u><b>24</b></u></span></td></tr><tr><td>21</td><td>9</td><td>14</td><td><u><b>16</b></u></span></td><td>7</td></tr><tr><td>6</td><td>10</td><td>3</td><td>18</td><td>5</td></tr><tr><td>1</td><td>12</td><td>20</td><td>15</td><td>19</td></tr></table>"
+       "<table><tr><td>22</td><td>13</td><td>17</td><td>11</td><td>0</td></tr><tr><td><u><b>8</b></u></td><td><u><b>2</b></u></td><td><u><b>23</b></u></td><td><u><b>4</b></u></td><td><u><b>24</b></u></td></tr><tr><td>21</td><td>9</td><td>14</td><td><u><b>16</b></u></td><td>7</td></tr><tr><td>6</td><td>10</td><td>3</td><td>18</td><td>5</td></tr><tr><td>1</td><td>12</td><td>20</td><td>15</td><td>19</td></tr></table>"
       ]
      },
      "metadata": {},
@@ -332,7 +325,7 @@
     {
      "data": {
       "text/html": [
-       "<table><tr><td>22</td><td>13</td><td>17</td><td>11</td><td><u><b>0</b></u></span></td></tr><tr><td><u><b>8</b></u></span></td><td><u><b>2</b></u></span></td><td><u><b>23</b></u></span></td><td>4</td><td><u><b>24</b></u></span></td></tr><tr><td>21</td><td>9</td><td>14</td><td><u><b>16</b></u></span></td><td><u><b>7</b></u></span></td></tr><tr><td>6</td><td>10</td><td>3</td><td>18</td><td><u><b>5</b></u></span></td></tr><tr><td>1</td><td>12</td><td>20</td><td>15</td><td><u><b>19</b></u></span></td></tr></table>"
+       "<table><tr><td>22</td><td>13</td><td>17</td><td>11</td><td><u><b>0</b></u></td></tr><tr><td><u><b>8</b></u></td><td><u><b>2</b></u></td><td><u><b>23</b></u></td><td>4</td><td><u><b>24</b></u></td></tr><tr><td>21</td><td>9</td><td>14</td><td><u><b>16</b></u></td><td><u><b>7</b></u></td></tr><tr><td>6</td><td>10</td><td>3</td><td>18</td><td><u><b>5</b></u></td></tr><tr><td>1</td><td>12</td><td>20</td><td>15</td><td><u><b>19</b></u></td></tr></table>"
       ]
      },
      "metadata": {},
@@ -526,7 +519,7 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><table><tr><td><u><b>14</b></u></span></td><td><u><b>21</b></u></span></td><td><u><b>17</b></u></span></td><td><u><b>24</b></u></span></td><td><u><b>4</b></u></span></td></tr><tr><td>10</td><td>16</td><td>15</td><td><u><b>9</b></u></span></td><td>19</td></tr><tr><td>18</td><td>8</td><td><u><b>23</b></u></span></td><td>26</td><td>20</td></tr><tr><td>22</td><td><u><b>11</b></u></span></td><td>13</td><td>6</td><td><u><b>5</b></u></span></td></tr><tr><td><u><b>2</b></u></span></td><td><u><b>0</b></u></span></td><td>12</td><td>3</td><td><u><b>7</b></u></span></td></tr></table></td></tr></tbody></table>"
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><table><tr><td><u><b>14</b></u></td><td><u><b>21</b></u></td><td><u><b>17</b></u></td><td><u><b>24</b></u></td><td><u><b>4</b></u></td></tr><tr><td>10</td><td>16</td><td>15</td><td><u><b>9</b></u></td><td>19</td></tr><tr><td>18</td><td>8</td><td><u><b>23</b></u></td><td>26</td><td>20</td></tr><tr><td>22</td><td><u><b>11</b></u></td><td>13</td><td>6</td><td><u><b>5</b></u></td></tr><tr><td><u><b>2</b></u></td><td><u><b>0</b></u></td><td>12</td><td>3</td><td><u><b>7</b></u></td></tr></table></td></tr></tbody></table>"
       ]
      },
      "metadata": {},
@@ -562,7 +555,7 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><table><tr><td>22</td><td>13</td><td><u><b>17</b></u></span></td><td><u><b>11</b></u></span></td><td><u><b>0</b></u></span></td></tr><tr><td>8</td><td><u><b>2</b></u></span></td><td><u><b>23</b></u></span></td><td><u><b>4</b></u></span></td><td><u><b>24</b></u></span></td></tr><tr><td><u><b>21</b></u></span></td><td><u><b>9</b></u></span></td><td><u><b>14</b></u></span></td><td><u><b>16</b></u></span></td><td><u><b>7</b></u></span></td></tr><tr><td>6</td><td><u><b>10</b></u></span></td><td>3</td><td>18</td><td><u><b>5</b></u></span></td></tr><tr><td>1</td><td>12</td><td>20</td><td>15</td><td>19</td></tr></table></td></tr></tbody></table>"
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><table><tr><td>22</td><td>13</td><td><u><b>17</b></u></td><td><u><b>11</b></u></td><td><u><b>0</b></u></td></tr><tr><td>8</td><td><u><b>2</b></u></td><td><u><b>23</b></u></td><td><u><b>4</b></u></td><td><u><b>24</b></u></td></tr><tr><td><u><b>21</b></u></td><td><u><b>9</b></u></td><td><u><b>14</b></u></td><td><u><b>16</b></u></td><td><u><b>7</b></u></td></tr><tr><td>6</td><td><u><b>10</b></u></td><td>3</td><td>18</td><td><u><b>5</b></u></td></tr><tr><td>1</td><td>12</td><td>20</td><td>15</td><td>19</td></tr></table></td></tr></tbody></table>"
       ]
      },
      "metadata": {},
@@ -589,7 +582,7 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><table><tr><td>3</td><td>15</td><td><u><b>0</b></u></span></td><td><u><b>2</b></u></span></td><td>22</td></tr><tr><td><u><b>9</b></u></span></td><td>18</td><td><u><b>13</b></u></span></td><td><u><b>17</b></u></span></td><td><u><b>5</b></u></span></td></tr><tr><td>19</td><td>8</td><td><u><b>7</b></u></span></td><td>25</td><td><u><b>23</b></u></span></td></tr><tr><td>20</td><td><u><b>11</b></u></span></td><td><u><b>10</b></u></span></td><td><u><b>24</b></u></span></td><td><u><b>4</b></u></span></td></tr><tr><td><u><b>14</b></u></span></td><td><u><b>21</b></u></span></td><td><u><b>16</b></u></span></td><td>12</td><td>6</td></tr></table></td></tr></tbody></table>"
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><table><tr><td>3</td><td>15</td><td><u><b>0</b></u></td><td><u><b>2</b></u></td><td>22</td></tr><tr><td><u><b>9</b></u></td><td>18</td><td><u><b>13</b></u></td><td><u><b>17</b></u></td><td><u><b>5</b></u></td></tr><tr><td>19</td><td>8</td><td><u><b>7</b></u></td><td>25</td><td><u><b>23</b></u></td></tr><tr><td>20</td><td><u><b>11</b></u></td><td><u><b>10</b></u></td><td><u><b>24</b></u></td><td><u><b>4</b></u></td></tr><tr><td><u><b>14</b></u></td><td><u><b>21</b></u></td><td><u><b>16</b></u></td><td>12</td><td>6</td></tr></table></td></tr></tbody></table>"
       ]
      },
      "metadata": {},
@@ -668,7 +661,7 @@
     {
      "data": {
       "text/html": [
-       "<table><tr><td>24</td><td>9</td><td>94</td><td>69</td><td><u><b>65</b></u></span></td></tr><tr><td>97</td><td><u><b>84</b></u></span></td><td>85</td><td>53</td><td><u><b>5</b></u></span></td></tr><tr><td>92</td><td>11</td><td>61</td><td><u><b>77</b></u></span></td><td>8</td></tr><tr><td><u><b>21</b></u></span></td><td><u><b>75</b></u></span></td><td><u><b>33</b></u></span></td><td><u><b>57</b></u></span></td><td><u><b>63</b></u></span></td></tr><tr><td><u><b>43</b></u></span></td><td>68</td><td>55</td><td>52</td><td>93</td></tr></table>"
+       "<table><tr><td>24</td><td>9</td><td>94</td><td>69</td><td><u><b>65</b></u></td></tr><tr><td>97</td><td><u><b>84</b></u></td><td>85</td><td>53</td><td><u><b>5</b></u></td></tr><tr><td>92</td><td>11</td><td>61</td><td><u><b>77</b></u></td><td>8</td></tr><tr><td><u><b>21</b></u></td><td><u><b>75</b></u></td><td><u><b>33</b></u></td><td><u><b>57</b></u></td><td><u><b>63</b></u></td></tr><tr><td><u><b>43</b></u></td><td>68</td><td>55</td><td>52</td><td>93</td></tr></table>"
       ]
      },
      "metadata": {},
@@ -726,7 +719,7 @@
     {
      "data": {
       "text/html": [
-       "<table><tr><td><u><b>84</b></u></span></td><td>86</td><td><u><b>77</b></u></span></td><td>97</td><td><u><b>28</b></u></span></td></tr><tr><td><u><b>37</b></u></span></td><td><u><b>87</b></u></span></td><td>2</td><td><u><b>93</b></u></span></td><td><u><b>5</b></u></span></td></tr><tr><td><u><b>16</b></u></span></td><td><u><b>64</b></u></span></td><td><u><b>35</b></u></span></td><td><u><b>61</b></u></span></td><td><u><b>27</b></u></span></td></tr><tr><td><u><b>8</b></u></span></td><td><u><b>3</b></u></span></td><td><u><b>36</b></u></span></td><td><u><b>10</b></u></span></td><td>73</td></tr><tr><td>31</td><td><u><b>65</b></u></span></td><td><u><b>94</b></u></span></td><td><u><b>63</b></u></span></td><td><u><b>13</b></u></span></td></tr></table>"
+       "<table><tr><td><u><b>84</b></u></td><td>86</td><td><u><b>77</b></u></td><td>97</td><td><u><b>28</b></u></td></tr><tr><td><u><b>37</b></u></td><td><u><b>87</b></u></td><td>2</td><td><u><b>93</b></u></td><td><u><b>5</b></u></td></tr><tr><td><u><b>16</b></u></td><td><u><b>64</b></u></td><td><u><b>35</b></u></td><td><u><b>61</b></u></td><td><u><b>27</b></u></td></tr><tr><td><u><b>8</b></u></td><td><u><b>3</b></u></td><td><u><b>36</b></u></td><td><u><b>10</b></u></td><td>73</td></tr><tr><td>31</td><td><u><b>65</b></u></td><td><u><b>94</b></u></td><td><u><b>63</b></u></td><td><u><b>13</b></u></td></tr></table>"
       ]
      },
      "metadata": {},
