day 9 - canvas visualization

--- a/day09/puzzle.ipynb
+++ b/day09/puzzle.ipynb
@@ -9,6 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -62,11 +69,67 @@
      "language": "fsharp"
     }
    },
+   "outputs": [],
+   "source": [
+    "#load \"../common.fsx\"\n",
+    "\n",
+    "let parse input = \n",
+    "    read2d input\n",
+    "    |> Array2D.map (string >> int)\n",
+    "let sampleHeightMap = parse sampleRaw\n",
+    "let sampleHeightMapJagged = Array2D.toJagged sampleHeightMap\n",
+    "let actualHeightMap = parse inputRaw\n",
+    "let actualHeightMapJagged = Array2D.toJagged actualHeightMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let lowPoints (heightMap : int[,]) = \n",
+    "    heightMap\n",
+    "    |> Array2D.mapi (fun i j value ->\n",
+    "                            let adj = \n",
+    "                                [|\n",
+    "                                    // use slicing opertator in order not to check boundaries.\n",
+    "                                    // each line returns at most one adjacent element\n",
+    "                                    heightMap.[i-1..i-1, j]\n",
+    "                                    heightMap.[i+1..i+1, j]\n",
+    "                                    heightMap.[i, j-1..j-1]\n",
+    "                                    heightMap.[i, j+1..j+1]\n",
+    "                                |] |> Array.collect id\n",
+    "                            \n",
+    "                            if (value < Array.min adj)\n",
+    "                            then Some (i,j,value)\n",
+    "                            else None\n",
+    "                        )\n",
+    "    |> Seq.cast<(int*int*int) option>\n",
+    "    |> Seq.choose id\n",
+    "    |> Array.ofSeq\n",
+    "\n",
+    "let sampleLowPoints = lowPoints sampleHeightMap\n",
+    "let actualLowPoints = lowPoints actualHeightMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "html"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><tr><td>2</td><td>1</td><td>9</td><td>9</td><td>9</td><td>4</td><td>3</td><td>2</td><td>1</td><td>0</td></tr><tr><td>3</td><td>9</td><td>8</td><td>7</td><td>8</td><td>9</td><td>4</td><td>9</td><td>2</td><td>1</td></tr><tr><td>9</td><td>8</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>8</td><td>9</td><td>2</td></tr><tr><td>8</td><td>7</td><td>6</td><td>7</td><td>8</td><td>9</td><td>6</td><td>7</td><td>8</td><td>9</td></tr><tr><td>9</td><td>8</td><td>9</td><td>9</td><td>9</td><td>6</td><td>5</td><td>6</td><td>7</td><td>8</td></tr></table>"
+       "<script src=\"./common.mjs\"/>"
       ]
      },
      "metadata": {},
@@ -74,17 +137,92 @@
     }
    ],
    "source": [
-    "#load \"../common.fsx\"\n",
-    "#load \"../formatting.fsx\"\n",
+    "<script src=\"./common.mjs\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "html"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<canvas id=\"sampleHeightMapJaggedWithLow\"></canvas>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "<canvas id=\"sampleHeightMapJaggedWithLow\"></canvas>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!share --from fsharp sampleHeightMapJagged\n",
+    "#!share --from fsharp sampleLowPoints\n",
     "\n",
-    "Formatter.Register<int[,]>((fun matrix -> formatTable (string) matrix), \"text/html\")\n",
-    "Formatter.Register<(int option)[,]>((fun matrix -> formatTable (function | None -> \".\" | Some value -> string value) matrix), \"text/html\")\n",
+    "var canvas = document.getElementById(\"sampleHeightMapJaggedWithLow\");\n",
+    "var canvas = document.getElementById(\"sampleHeightMapJaggedWithLow\");\n",
     "\n",
-    "let parse input = \n",
-    "    read2d input\n",
-    "    |> Array2D.map (string >> int)\n",
-    "let sampleHeightMap = parse sampleRaw |> displayPipe\n",
-    "let actualHeightMap = parse inputRaw"
+    "var size = prepareCanvas(sampleHeightMapJagged, canvas, 200)\n",
+    "drawMap(sampleHeightMapJagged, canvas, size);\n",
+    "drawPoints(sampleLowPoints, \"black\", canvas, size);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "html"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<canvas id=\"actualHeightMapJaggedWithLow\"></canvas>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "<canvas id=\"actualHeightMapJaggedWithLow\"></canvas>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!share --from fsharp actualLowPoints\n",
+    "#!share --from fsharp actualHeightMapJagged\n",
+    "var canvas = document.getElementById(\"actualHeightMapJaggedWithLow\");\n",
+    "var size = prepareCanvas(actualHeightMapJagged, canvas, 600)\n",
+    "drawMap(actualHeightMapJagged, canvas, size);\n",
+    "drawPoints(actualLowPoints, \"black\", canvas, size);"
    ]
   },
   {
@@ -96,15 +234,6 @@
     }
    },
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><tr><td>.</td><td>1</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>0</td></tr><tr><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td></tr><tr><td>.</td><td>.</td><td>5</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td></tr><tr><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td></tr><tr><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>.</td><td>5</td><td>.</td><td>.</td><td>.</td></tr></table>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -125,32 +254,21 @@
     }
    ],
    "source": [
-    "let lowPoints (heightMap : int[,]) = \n",
-    "    Array2D.mapi (fun i j value ->\n",
-    "                            let adj = \n",
-    "                                [|\n",
-    "                                    // use slicing opertator in order not to check boundaries.\n",
-    "                                    // each line returns at most one adjacent element\n",
-    "                                    heightMap.[i-1..i-1, j]\n",
-    "                                    heightMap.[i+1..i+1, j]\n",
-    "                                    heightMap.[i, j-1..j-1]\n",
-    "                                    heightMap.[i, j+1..j+1]\n",
-    "                                |] |> Array.collect id\n",
-    "                            \n",
-    "                            if (value < Array.min adj)\n",
-    "                            then Some value\n",
-    "                            else None\n",
-    "                        ) heightMap\n",
-    "\n",
-    "lowPoints sampleHeightMap |> display\n",
-    "let riskLevel lowPointsMap = \n",
-    "    lowPointsMap\n",
-    "    |> Array2D.toArray \n",
-    "    |> Array.choose id\n",
+    "let riskLevel lowPoints = \n",
+    "    lowPoints\n",
+    "    |> Array.map (fun (_,_,value) -> value)\n",
     "    |> Array.map ((+) 1)\n",
     "    |> Array.sum\n",
-    "lowPoints sampleHeightMap |> riskLevel |> display\n",
-    "lowPoints actualHeightMap |> riskLevel |> display"
+    "    \n",
+    "sampleLowPoints |> riskLevel |> display\n",
+    "actualLowPoints |> riskLevel |> display"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
    ]
   },
   {
@@ -203,11 +321,25 @@
      "language": "fsharp"
     }
    },
+   "outputs": [],
+   "source": [
+    "let sampleBanisPoints = basins sampleHeightMap;\n",
+    "let actualBanisPoints = basins actualHeightMap;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "html"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><tr><td>0</td><td>0</td><td>.</td><td>.</td><td>.</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td></tr><tr><td>0</td><td>.</td><td>2</td><td>2</td><td>2</td><td>.</td><td>1</td><td>.</td><td>1</td><td>1</td></tr><tr><td>.</td><td>2</td><td>2</td><td>2</td><td>2</td><td>2</td><td>.</td><td>3</td><td>.</td><td>1</td></tr><tr><td>2</td><td>2</td><td>2</td><td>2</td><td>2</td><td>.</td><td>3</td><td>3</td><td>3</td><td>.</td></tr><tr><td>.</td><td>2</td><td>.</td><td>.</td><td>.</td><td>3</td><td>3</td><td>3</td><td>3</td><td>3</td></tr></table>"
+       "<canvas id=\"sampleBanisPoints\"></canvas>"
       ]
      },
      "metadata": {},
@@ -215,13 +347,68 @@
     }
    ],
    "source": [
-    "let private showBasins (basins: (int*int) list list) (heightMap: int[,]) = \n",
-    "    let basinsMap = Array2D.zeroCreate (Array2D.length1 heightMap) (Array2D.length2 heightMap)\n",
-    "    basins\n",
-    "    |> Seq.iteri (fun num basin -> basin |> Seq.iter (fun (i,j) -> basinsMap.[i,j] <- Some num))\n",
-    "    basinsMap |> display |> ignore\n",
+    "<canvas id=\"sampleBanisPoints\"></canvas>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!share --from fsharp sampleBanisPoints\n",
     "\n",
-    "showBasins (basins sampleHeightMap) sampleHeightMap"
+    "var canvas = document.getElementById(\"sampleBanisPoints\");\n",
+    "var size = prepareCanvas(sampleHeightMapJagged, canvas, 200)\n",
+    "sampleBanisPoints.forEach(basin => {\n",
+    "    drawPoints(basin, 'hsla(' + (Math.random() * 360) + ', 80%, 50%, 1)', canvas, size);\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "html"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<canvas id=\"actualBanisPoints\"></canvas>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "<canvas id=\"actualBanisPoints\"></canvas>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!share --from fsharp actualBanisPoints\n",
+    "\n",
+    "var canvas = document.getElementById(\"actualBanisPoints\");\n",
+    "var size = prepareCanvas(actualHeightMapJagged, canvas, 500)\n",
+    "actualBanisPoints.forEach(basin => {\n",
+    "    drawPoints(basin, 'hsla(' + (Math.random() * 360) + ', 80%, 50%, 1)', canvas, size);\n",
+    "})"
    ]
   },
   {
