day 8 - try Farkle

--- a/notebooks/day08/puzzle.ipynb
+++ b/notebooks/day08/puzzle.ipynb
@@ -53,15 +53,40 @@
      "language": "fsharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Farkle, 6.3.2</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "let private parseSegmentsLine (s : string) = \n",
-    "    s.Split(\" \")\n",
-    "    |> Array.map Segments.create\n",
+    "#r \"nuget:Farkle, 6.3.2\"\n",
+    "open Farkle\n",
+    "open Farkle.Builder\n",
+    "open Farkle.Builder.Regex\n",
+    "\n",
+    "let private pattern = chars \"abcdefg\" |> between 1 7 |> terminal \"Pattern\" (T(fun _ x -> x.ToString() |> Segments.create))\n",
+    "let private patternList = nonterminal \"Patterns\"\n",
+    "patternList.SetProductions(\n",
+    "    !@ pattern .>>. patternList => (fun x xs -> x :: xs),\n",
+    "    !@ pattern => (fun x -> [x])\n",
+    ")\n",
+    "let private entry = \"Entry\" ||= [\n",
+    "    !@ patternList .>> \"|\" .>>. patternList => (fun patterns output -> patterns,output)\n",
+    "]\n",
+    "\n",
+    "let private parser = RuntimeFarkle.build entry\n",
+    "\n",
     "let parse (input : string) = \n",
-    "    input.Split([|\"\\n\"; \"\\r\"|], StringSplitOptions.RemoveEmptyEntries)\n",
-    "    |> Array.map (fun line -> splitToTuple2 [|\" | \"|] line)\n",
-    "    |> Array.map (fun (patterns, output) -> parseSegmentsLine patterns, parseSegmentsLine output)"
+    "    readLines input\n",
+    "    |> Array.map (RuntimeFarkle.parseString parser)\n",
+    "    |> Array.map Result.failIfError\n",
+    "    |> Array.map (fun (patterns, output) -> Array.ofList patterns, Array.ofList output)"
    ]
   },
   {
