use slashes not blackslashes in paths to support nix environment

--- a/notebooks/day03/puzzle_1_actual.ipynb
+++ b/notebooks/day03/puzzle_1_actual.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "#load \"common.fsx\"\n",
-    "#load \"..\\common.fsx\""
+    "#load \"../common.fsx\""
    ]
   },
   {
