--- a/notebooks/day12/puzzle.ipynb
+++ b/notebooks/day12/puzzle.ipynb
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "#load \"..\\common.fsx\"\n",
+    "#load \"../common.fsx\"\n",
     "\n",
     "let parse input =\n",
     "    let node s =\n",
