--- a/notebooks/day03/puzzle_0_2_sample.ipynb
+++ b/notebooks/day03/puzzle_0_2_sample.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "#load \"common.fsx\"\n",
-    "#load \"..\\common.fsx\""
+    "#load \"../common.fsx\""
    ]
   },
   {
