--- a/notebooks/day09/puzzle.ipynb
+++ b/notebooks/day09/puzzle.ipynb
@@ -122,6 +122,24 @@
    "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
+     "language": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "transposePoints = points => {\n",
+    "    return points.map(x => { return { Item1: x.Item2, Item2: x.Item1 } })\n",
+    "}\n",
+    "transposeMatrix = m => { \n",
+    "    return m[0].map((_, colIndex) => m.map(row => row[colIndex]));\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
      "language": "html"
     }
    },
@@ -129,7 +147,7 @@
     {
      "data": {
       "text/html": [
-       "<script src=\"./common.mjs\"/>"
+       "<script src=\"../drawMatrix.mjs\"/>"
       ]
      },
      "metadata": {},
@@ -137,7 +155,7 @@
     }
    ],
    "source": [
-    "<script src=\"./common.mjs\"/>"
+    "<script src=\"../drawMatrix.mjs\"/>"
    ]
   },
   {
@@ -178,9 +196,9 @@
     "\n",
     "var canvas = document.getElementById(\"sampleHeightMapJaggedWithLow\");\n",
     "\n",
-    "var size = prepareCanvas(sampleHeightMapJagged, canvas, 200)\n",
-    "drawMap(sampleHeightMapJagged, canvas, size);\n",
-    "drawPoints(sampleLowPoints, \"black\", canvas, size);\n"
+    "var size = prepareCanvas(transposeMatrix(sampleHeightMapJagged), canvas, 200)\n",
+    "drawMap(transposeMatrix(sampleHeightMapJagged), canvas, size);\n",
+    "drawPoints(transposePoints(sampleLowPoints), \"black\", canvas, size);\n"
    ]
   },
   {
@@ -219,9 +237,9 @@
     "#!share --from fsharp actualLowPoints\n",
     "#!share --from fsharp actualHeightMapJagged\n",
     "var canvas = document.getElementById(\"actualHeightMapJaggedWithLow\");\n",
-    "var size = prepareCanvas(actualHeightMapJagged, canvas, 600)\n",
-    "drawMap(actualHeightMapJagged, canvas, size);\n",
-    "drawPoints(actualLowPoints, \"black\", canvas, size);"
+    "var size = prepareCanvas(transposeMatrix(actualHeightMapJagged), canvas, 600)\n",
+    "drawMap(transposeMatrix(actualHeightMapJagged), canvas, size);\n",
+    "drawPoints(transposePoints(actualLowPoints), \"black\", canvas, size);"
    ]
   },
   {
@@ -362,9 +380,9 @@
     "#!share --from fsharp sampleBanisPoints\n",
     "\n",
     "var canvas = document.getElementById(\"sampleBanisPoints\");\n",
-    "var size = prepareCanvas(sampleHeightMapJagged, canvas, 200)\n",
+    "var size = prepareCanvas(transposeMatrix(sampleHeightMapJagged), canvas, 200)\n",
     "sampleBanisPoints.forEach(basin => {\n",
-    "    drawPoints(basin, 'hsla(' + (Math.random() * 360) + ', 80%, 50%, 1)', canvas, size);\n",
+    "    drawPoints(transposePoints(basin), 'hsla(' + (Math.random() * 360) + ', 80%, 50%, 1)', canvas, size);\n",
     "})"
    ]
   },
@@ -404,9 +422,9 @@
     "#!share --from fsharp actualBanisPoints\n",
     "\n",
     "var canvas = document.getElementById(\"actualBanisPoints\");\n",
-    "var size = prepareCanvas(actualHeightMapJagged, canvas, 500)\n",
+    "var size = prepareCanvas(transposeMatrix(actualHeightMapJagged), canvas, 500)\n",
     "actualBanisPoints.forEach(basin => {\n",
-    "    drawPoints(basin, 'hsla(' + (Math.random() * 360) + ', 80%, 50%, 1)', canvas, size);\n",
+    "    drawPoints(transposePoints(basin), 'hsla(' + (Math.random() * 360) + ', 80%, 50%, 1)', canvas, size);\n",
     "})"
    ]
   },
